# MTRN2500Tutoring

./: README.md
24t3-tut-wk4-main/: README.md
24t3-tut-wk4-main/src/: CMakeLists.txt  MyIntVec.cpp  charBuffer.cpp  countGreaterThanAverage.cpp  divideNumbersInRange.cpp  divisionByZero.cpp  exceptions.cpp  filterJunkWords.cpp  frameWords.cpp  isBalanced.cpp  lambdaFunctions.cpp  nOccurrences.cpp  removeDuplicates.cpp  removeKeysEqualToValue.cpp  removeNegative.cpp  reverseCopy.cpp  sumMultiplesOfThree.cpp  toUppercase.cpp
24t3-tut-wk4-main/test/: CMakeLists.txt  UnitTest.cpp
Week2/tut2Student/: CMakeLists.txt  Student.cpp  Student.h  main.cpp
Week2/tut2Student/test/: CMakeLists.txt  UnitTest.cpp
Week3/: README.md
Week3/include/: Enrolments.hpp  Vector2D.hpp
Week3/src/: CMakeLists.txt  Enrolments.cpp  IntList.cpp  Vector2D.cpp  allocateArray.cpp  badSwap.cpp  copySemantics.cpp  danglingRef.cpp  destructorOrder.cpp  main.cpp  malloc.cpp  passBy.cpp  pointers.cpp  references.cpp  uniquePtr.cpp
Week3/test/: CMakeLists.txt  UnitTest.cpp
