add_executable(charBuffer charBuffer.cpp)
add_executable(main main.cpp)
add_executable(isBalanced isBalanced.cpp)
add_executable(removeDuplicates removeDuplicates.cpp)
add_executable(nOccurrences nOccurrences.cpp)
add_executable(reverseCopy reverseCopy.cpp)
add_executable(removeKeysEqualToValue removeKeysEqualToValue.cpp)
add_executable(MyIntVec MyIntVec.cpp)
add_executable(removeNegative removeNegative.cpp)
add_executable(sumMultiplesOfThree sumMultiplesOfThree.cpp)
add_executable(countGreaterThanAverage countGreaterThanAverage.cpp)
add_executable(toUppercase toUppercase.cpp)
add_executable(exceptions exceptions.cpp)
add_executable(divideNumbersInRange divideNumbersInRange.cpp)
add_executable(divisionByZero divisionByZero.cpp)
add_executable(frameWords frameWords.cpp)
add_executable(filterJunkWords filterJunkWords.cpp)
add_executable(lambdaFunctions lambdaFunctions.cpp)